# ncnnVxp

./: CMakeLists.txt  README.md  ncnnVxp.vxp  ncnnVxp2.vxp
cmake/: AddMreExec.cmake  toolchain-arm-none-eabi.cmake
docs/: index.html  ncnnVxp.vxp  ncnnVxp1.vxp
main/: CMakeLists.txt  face_detection_yunet_2026may-opt.id.h  face_detection_yunet_2026may-opt.mem.h  face_detection_yunet_2026may-opt.param  image_classifier_opt.id.h  image_classifier_opt.mem.h  main.cpp  mnist-int8.id.h  yolo_cat.id.h  yolo_cat_int8.id.h  yolo_cat_int8.mem.h
resources/: CMakeLists.txt
